--- a/vagrant/python.yml
+++ b/vagrant/python.yml
@@ -3,7 +3,7 @@
   become: yes
   become_user: decide
   git:
-    repo: 'https://github.com/wadobo/decide.git'
+    repo: 'https://github.com/Francisco-David/EGC-2324-1140-turno22-fravilde1.git'
     dest: /home/decide/decide
     version: master
 
